Lucene tests were fixed.